<resources>
    <string name="algolia_app_id">YVL1UI29QL</string>
    <string name="algolia_api_key">d1e8a0c7b4dfaaeafbcc1b6d48d7e5fc</string>
    <string name="algolia_services_index">services</string>


    <string name="app_name">Mobile Mechanics</string>
    <string name="text_notification">Notification</string>
    <string name="text_find_service">Find Service</string>
    <string name="text_garage">Garage</string>
    <string name="text_service_request">Service Request</string>
    <string name="text_history">History</string>
    <string name="text_settings">Settings</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_select">Select</string>
    <string name="text_title">Title</string>
    <string name="text_toast">Toast</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_rate">Rate</string>
    <string name="text_details">Details</string>
    <string name="text_rating">Rating</string>
    <string name="text_rating_initial">0</string>
    <string name="text_rating_wrong">What went Wrong?</string>
    <string name="text_rating_comment">Comment</string>
    <string name="text_rating_subitle">Rate the service</string>
    <string name="text_service">Service</string>
    <string name="text_filter">Filter</string>
    <string name="text_service_needed">Service Needed</string>
    <string name="text_address">Address</string>
    <string name="text_decline">Decline</string>
    <string name="title_activity_mechanic_manage_job">Map</string>
    <string name="text_cancel_job">Cancel Job</string>
    <string name="text_contact">Contact</string>
    <string name="text_status">Status:</string>
    <string name="text_next">Next</string>
    <string name="text_summary">Summary</string>
    <string name="text_mechanic">Mechanic</string>
    <string name="text_service_completed">Service Completed</string>
    <string name="text_email">Email</string>
    <string name="text_message">Message</string>

    <string name="notification">Notification</string>
    <string name="garage">Garage</string>
    <string name="service_request">Service Request</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="my_service">My Services</string>
    <string name="text_selection1">Poor service</string>
    <string name="text_selection2">Expensive</string>
    <string name="text_selection3">Rude</string>
    <string name="text_selection4">Service takes too long</string>
    <string name="text_selection5">Not on time</string>
    <string name="text_selection6">Not helpful</string>
    <string name="text_selection7">Other</string>

    <string name="specify_your_issue">Specify your issue</string>
    <string name="availability">Availability</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous services</string>


    <string name="text_registration_subtitle">Create a new account</string>
    <string name="hint_registration_email">Email Address</string>
    <string name="hint_registration_password">Password</string>
    <string name="hint_registration_passwordConfirmation">Password Confirmation</string>
    <string name="hint_registration_firstName">First Name</string>
    <string name="hint_registration_lastName">Last Name</string>
    <string name="hint_registration_phoneNumber">Phone Number</string>
    <string name="hint_registration_address">Street Address</string>
    <string name="hint_registration_city">City</string>
    <string name="hint_registration_state">State</string>
    <string name="hint_registration_zipcode">Zip</string>
    <string name="hint_register_button">Register</string>
    <string name="hint_signIn">Sign In</string>
    <string name="service">Service</string>
    <string name="form">Form</string>

    <string name="email_identification">Are you %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verification">Verification</string>
    <string name="login_success">Login Successfull</string>
    <string name="email_input">Enter your Email address</string>
    <string name="reset_success">Reset Successfull: Check your Email</string>
    <string name="reset_failed">Reset Failed</string>

    <string-array name="vehicles_array">
        <item>Vehicle</item>
        <item>2011 Toyota Avalon</item>
        <item>2013 Toyota Camry</item>
    </string-array>

    <string-array name="services_array">
        <item>Service</item>
        <item>Oil Change.</item>
        <item>Change Tire</item>
        <item>Air Tire</item>
        <item>Check Engine Light</item>
    </string-array>

    <string name="title_activity_mechanic_welcome">MechanicWelcomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_activity_mechanic_services">MechanicServices</string>
    <string name="label_Price">Price</string>
    <string name="label_comment_add_serivce">Comment</string>
    <string name="label_cancel_add_service">Cancel</string>
    <string name="label_add_service">Add</string>

    <string name="place_holder_client_name">Jackie Chan</string>
    <string name="request_on">Requested on %s</string>
    <string name="accept_on">Accepted on %s</string>
    <string name="complete_on">Completed on %s</string>
    <string name="request_status_request">Request</string>
    <string name="request_status_active">Active</string>
    <string name="request_status_complete">Complete</string>
    <string name="request_desc">%s for %s</string>
    <string name="place_holder_request_desc">Oil Change for 2011 Toyota Venza.</string>
    <string name="place_holder_distance">3.14 mi</string>
    <string name="label_button_info_more">More</string>
    <string name="label_button_info_manage">Manage</string>
    <string name="label_choice_accept">Accept</string>
    <string name="label_choice_complete">Complete</string>
    <string name="label_choice_confirm">Confirm</string>
    <string name="label_remove_service">Are you sure you want to remove?</string>
    <string name="label_update_service">Update</string>
    <string name="miles">%.2f mi</string>

    <string name="price">$%.2f</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm_desc">1. The client issue has been resolved\n2. You have received the correct payment for
        your service
    </string>
    <string name="confirm_that">Here you confirm that</string>
    <string name="title_activity_mechanic_more_information">Map</string>
    <string name="text_more">More</string>
    <string name="text_accept">Accept</string>
    <string name="text_remove">Remove</string>
    <string name="text_update">Update</string>

    <!-- FireStore Collection References -->
    <string name="ref_accounts">Accounts</string>
    <string name="ref_services">Services</string>
    <string name="ref_requests">Requests</string>
    <string name="ref_chatRooms">ChatRooms</string>
    <string name="ref_payments">Payments</string>
    <string name="ref_charges">Charges</string>

    <string name="err_accept_fail">Failed to accept request.</string>
    <string name="err_decline_fail">Failed to decline request.</string>
    <string name="err_complete_fail">Failed to complete service.</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>
    <string name="err_cancel_job_fail">Failed to cancel job.</string>
    <string name="text_review">Review</string>
    <string name="text_not_a_member">Not a member? Click here to get started!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="text_remove_service_question">Are you sure you want to remove this service?</string>
    <string name="text_distance">Distance</string>
    <string name="text_messages">Messages</string>
    <string name="label_message_btn">Message</string>
    <string name="label_call_btn">Call</string>
    <string name="label_chatlog">Enter Message</string>
    <string name="label_send_msg_btn">Send</string>
    <string name="text_check_faq">Have question? Check our FAQ page.</string>
    <string name="title_activity_mechanic_reviews">MechanicReviewsActivity</string>
    <string name="label_payment">Payment</string>
    <string name="text_grand_total">Grand total</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_estimated_tax">Estimated tax</string>
    <string name="label_tip">Tip</string>
    <string name="label_cardnumber">Card Number</string>
    <string name="label_expire">Exp. Date</string>
    <string name="label_cvc">CVC</string>
    <string name="id_submit_payment_btn">Pay</string>
    <string name="label_cardnumbers">424242</string>
    <string name="text">Map</string>

</resources>
