<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/client_app_options">
        <item android:id="@+id/notification"
        android:layout_centerVertical="true"
        android:title="@string/notification"/>

        <item android:id="@+id/garage"
              android:layout_centerVertical="true"
              android:title="@string/garage"/>

        <item android:id="@+id/id_service_request"
              android:layout_centerVertical="true"
              android:title="@string/service_request" android:icon="@drawable/ic_car_service"/>

        <item android:id="@+id/id_history"
              android:layout_centerVertical="true"
              android:title="@string/history"/>

        <item android:id="@+id/settings"
              android:layout_centerVertical="true"
              android:title="@string/settings"/>

    </group>
    <group android:id="@+id/client_access_control">
        <item android:id="@+id/sign_out"
              android:layout_centerVertical="true"
              android:title="@string/sign_out"/>
    </group>
</menu>