<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notifications_gray_24dp"
                android:title="@string/notification"/>
        <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/ic_notifications_gray_24dp"
                android:title="@string/text_messages"/>
        <item
                android:id="@+id/nav_services"
                android:icon="@drawable/ic_my_service_gray_24dp"
                android:title="@string/my_service"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history_gray_24dp"
                android:title="@string/history"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_gray_24dp"
                android:title="@string/settings"/>
    </group>

    <group android:id="@+id/client_access_control">
        <item android:id="@+id/id_mech_sign_out"
              android:layout_centerVertical="true"
              android:title="@string/text_sign_out" android:icon="@drawable/ic_exit_app_gray_24dp"/>
    </group>
</menu>
