<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:id="@+id/client_app_options">
        <item android:id="@+id/id_notification"
              android:layout_centerVertical="true"
              android:title="@string/text_notification" android:icon="@drawable/ic_notifications_gray_24dp"/>

        <item android:id="@+id/id_find_service"
              android:layout_centerVertical="true"
              android:title="@string/text_find_service" android:icon="@android:drawable/ic_menu_search"/>
        <item android:id="@+id/id_garage"
              android:layout_centerVertical="true"
              android:title="@string/text_garage" android:icon="@drawable/ic_directions_car_gray_24dp"/>

        <item android:id="@+id/id_history"
              android:layout_centerVertical="true"
              android:title="@string/text_history" android:icon="@android:drawable/ic_menu_recent_history"/>

        <item android:id="@+id/id_settings"
              android:layout_centerVertical="true"
              android:title="@string/text_settings" android:icon="@drawable/ic_settings_gray_24dp"/>

    </group>
    <group android:id="@+id/mechanic_access_control">
        <item android:id="@+id/id_sign_out"
              android:layout_centerVertical="true"
              android:title="@string/text_sign_out" android:icon="@drawable/ic_exit_app_gray_24dp"/>
    </group>
</menu>