<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notifications_grey_24dp"
                android:title="@string/notification"/>
        <item
                android:id="@+id/nav_services"
                android:icon="@drawable/ic_my_service_grey_24dp"
                android:title="@string/my_service"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history_grey_24dp"
                android:title="@string/history"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_grey_24dp"
                android:title="@string/settings"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send"/>
        </menu>
    </item>

</menu>
