<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".client.servicerating.ServiceRatingActivity" android:id="@+id/frameLayout">

    <android.support.constraint.ConstraintLayout
            android:layout_width="411dp"
            android:background="@drawable/round_corner_bottom"
            android:elevation="5dp"
            android:fitsSystemWindows="true"
            android:layout_height="621dp" android:layout_gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:id="@+id/id_rating_radioGroup"
                android:orientation="vertical">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="111dp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="296dp"
                    android:layout_marginStart="0dp">
                <CheckBox
                        style="@style/RadioTextBar"
                        android:text="@string/text_selection1"
                        android:id="@+id/id_rating_checkbox1"
                        android:layout_alignParentTop="true"/>
                <CheckBox
                        style="@style/RadioTextBar"
                        android:text="@string/text_selection2"
                        android:id="@+id/id_rating_checkbox2"
                        android:layout_toRightOf="@+id/id_rating_checkbox1"/>
                <CheckBox
                        style="@style/RadioTextBar"
                        android:text="@string/text_selection3"
                        android:layout_height="25dp"
                        android:id="@+id/id_rating_checkbox3"
                        android:layout_toRightOf="@+id/id_rating_checkbox2"/>
                <CheckBox
                        style="@style/RadioTextBar"
                        android:text="@string/text_selection4"
                        android:id="@+id/id_rating_checkbox4"
                        android:layout_below="@+id/id_rating_checkbox1"/>
                <CheckBox
                        style="@style/RadioTextBar"
                        android:text="@string/text_selection5"
                        android:id="@+id/id_rating_checkbox5"
                        android:layout_toRightOf="@+id/id_rating_checkbox4"
                        android:layout_below="@+id/id_rating_checkbox1"/>
                <CheckBox
                        style="@style/RadioTextBar"
                        android:text="@string/text_selection6"
                        android:id="@+id/id_rating_checkbox6"
                        android:layout_below="@id/id_rating_checkbox5"/>
                <CheckBox
                        style="@style/RadioTextBar"
                        android:text="@string/text_selection7"
                        android:id="@+id/id_rating_checkbox7"
                        android:layout_below="@id/id_rating_checkbox4"
                        android:layout_toRightOf="@+id/id_rating_checkbox6"/>
            </RelativeLayout>
        </RadioGroup>
        <TextView
                android:layout_width="209dp"
                android:layout_height="24dp"
                android:fontFamily="@font/qualio_bold" android:textSize="24sp"
                android:id="@+id/id_rating_rate" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="148dp"
                android:layout_marginStart="100dp" android:text="@string/text_rating_initial"
                android:textAlignment="center"/>
        <EditText
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/id_rating_comment"
                android:inputType="textMultiLine" android:hint="@string/text_rating_comment"
                android:maxLength="150"
                android:maxHeight="100dp"
                android:backgroundTint="@color/colorGrayText" android:drawableTint="@color/colorPrimaryDark"
                android:fontFamily="@font/qualio" android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="80dp" android:layout_marginTop="140dp"
                app:layout_constraintTop_toBottomOf="@+id/id_rating_question2" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.013"
                app:layout_constraintBottom_toTopOf="@+id/id_rating_submit" android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.478"/>
        <Button
                android:text="@string/submit"
                android:layout_width="220dp"
                android:layout_height="50dp" android:id="@+id/id_rating_submit"
                android:fontFamily="@font/qualio_bold"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary1"
                android:background="@drawable/default_border"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="516dp" android:layout_marginStart="104dp" android:textSize="24sp"/>
        <RatingBar
                android:layout_width="244dp"
                android:layout_height="54dp" android:id="@+id/id_rating_bar"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="188dp"
                android:numStars="@android:integer/config_shortAnimTime"
                style="@style/Widget.AppCompat.RatingBar"/>
        <android.support.v7.widget.Toolbar
                style="@style/AppActionBar"
                app:titleTextAppearance="@style/AppActionBarTitle"
                app:subtitleTextAppearance="@style/AppActionBarSubtitle"
                android:id="@+id/id_rating_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:layout_width="284dp"
                android:layout_height="24dp"
                android:id="@+id/id_rating_question"
                android:fontFamily="@font/qualio_bold" android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="112dp"
                android:textColor="@color/colorPrimary3" android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="63dp"/>
        <TextView
                android:layout_width="209dp"
                android:layout_height="24dp"
                android:id="@+id/id_rating_question2"
                android:fontFamily="@font/qualio_bold" android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="272dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="105dp"
                android:textColor="@color/colorPrimary3" android:textAlignment="center"
                android:text="@string/text_rating_wrong"/>
    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:src="@drawable/bottom_bg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/id_rating_imageView"
                app:layout_constraintBottom_toBottomOf="parent" tools:layout_editor_absoluteX="0dp"
                android:background="@drawable/bottom_bg2"
                android:contentDescription="bottom @string/bottom_sheet_behavior"
                android:layout_alignParentBottom="true" android:layout_marginBottom="0dp"
                android:layout_alignParentStart="true" android:layout_marginStart="0dp"/>
    </RelativeLayout>

</FrameLayout>