<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="198dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="12dp" android:layout_marginEnd="12dp" android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" app:cardCornerRadius="10dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_client_profile"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:src="@drawable/chan_profile"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000" android:layout_marginTop="22dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" android:layout_marginStart="26dp"
            />

            <TextView
                    android:text="@string/place_holder_client_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/label_service_type" android:textSize="20sp"
                    android:textStyle="bold" android:layout_marginTop="6dp"
                    android:layout_below="@+id/image_client_profile" android:layout_alignParentStart="true"
                    android:layout_marginStart="11dp"/>
            <TextView
                    android:text="@string/request_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_time_stamp"
                    android:layout_marginTop="3dp"
                    android:layout_below="@+id/label_service_type" android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"/>
            <TextView
                    android:text="@string/request_status_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_status" android:textSize="20sp"
                    android:layout_marginTop="27dp" android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/image_client_profile" android:layout_marginStart="25dp"/>
            <TextView
                    android:text="@string/place_holder_request_desc"
                    android:layout_width="253dp"
                    android:layout_height="81dp" android:id="@+id/text_description"
                    android:layout_marginTop="3dp" android:layout_below="@+id/text_status"
                    android:layout_toEndOf="@+id/image_client_profile" android:layout_marginStart="26dp"/>
            <TextView
                    android:text="@string/place_holder_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_distance"
                    android:layout_marginTop="6dp"
                    android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"/>
            <Button
                    android:text="@string/label_button_info_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/id_button_info"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="0dp" android:layout_toStartOf="@+id/id_button_update"
                    android:layout_marginEnd="9dp"/>
            <Button
                    android:text="@string/label_button_choice_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/id_button_update"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="1dp"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>