<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mechanic.addservice.AddService"
        android:background="@color/colorGrayTextDark">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/label_price"
            android:inputType="number|numberDecimal" android:hint="@string/label_Price" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/add_service_spinner"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textPersonName"
            android:ems="10"
            android:id="@+id/label_comment" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/label_price" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/label_comment_add_serivce"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_cancel_add_service" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/label_comment" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="60dp"
            android:text="@string/label_cancel_add_service"/>
    <Button
            android:text="@string/label_add_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_add_service" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/label_comment" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/label_cancel_add_service"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.603"
    />
    <Spinner
            android:layout_width="268dp"
            android:layout_height="42dp"
            android:id="@+id/add_service_spinner" android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.496" android:focusable="auto"/>
</android.support.constraint.ConstraintLayout>