<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="322dp">

    <TextView
            android:text="@string/text_title"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:id="@+id/id_service_type"
            android:background="@drawable/dialog_header_bg"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textColor="@color/colorPrimary" android:fontFamily="@font/qualio_bold" android:textSize="32sp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="171dp"
            app:layout_constraintTop_toBottomOf="@+id/id_service_type" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.17"
            android:id="@+id/id_body">

    </android.support.constraint.ConstraintLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="60dp" android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/id_body" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:id="@+id/id_negative"
                android:background="@drawable/border_top"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="18sp"
                android:fontFamily="@font/timeburnerbold"
                android:gravity="center"
                android:textColor="@color/colorGrayText" android:text="@string/text_cancel"/>
        <TextView
                android:id="@+id/id_positive"
                android:text="@string/text_confirm"
                android:background="@drawable/border_top"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorPrimary1"
                android:textSize="18sp"
                android:fontFamily="@font/timeburnerbold"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>